--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
+    <title>Welcome to Chatty App!</title>
 </head>
 <body>
   <div id="react-root"></div>
